--- a/app/globals.css
+++ b/app/globals.css
@@ -39,7 +39,7 @@ body {
 }
 
 .nav-btn {
-  @apply w-fit px-2 sm:px-4 py-0.5 sm:py-1 rounded-full bg-p6 text-p1 shadow-md shadow-p4/25 cursor-pointer font-medium text-sm sm:text-base
+  @apply w-fit px-2 sm:px-4 py-0.5 sm:py-1 rounded-full bg-p6 text-p1 shadow-md shadow-p4/25 cursor-pointer font-medium
 }
 
 .nav-link {
